<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".OtherActivity1">

    <TextView
            android:text="@string/label_info_activity2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tv_info"
            android:textSize="24sp"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent"/>

    <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/RG_1"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp"
            android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toTopOf="@+id/tv_info">

        <TextView
                android:text="@string/radio_label_title1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/rg1_title"
                android:layout_weight="1"
                android:textSize="20sp"/>

        <RadioButton
                android:text="@string/radio_button1_item1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/radioBtn1"
                android:layout_weight="1"
                android:checked="true"
                android:textSize="18sp"/>

        <RadioButton
                android:text="@string/radio_button2_item2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/radioBtn2"
                android:layout_weight="1"
                android:textSize="18sp"/>

        <RadioButton
                android:text="@string/radio_button_item3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/radioBtn3"
                android:layout_weight="1"
                android:textSize="18sp"/>
    </RadioGroup>

    <Button
            android:text="Send return msg"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/btn_send"
            android:textSize="24sp"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/tv_info"
            android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintVertical_bias="1.0"/>
</android.support.constraint.ConstraintLayout>