<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ThreadActivity"
        android:id="@+id/demo_thread_layout">

    <TextView
            android:text="@string/label_show_thread_state"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/show_thread_state"
            android:textAppearance="@style/TextAppearance.AppCompat.Body2"
            android:textSize="24sp"
            android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="188dp"
            app:layout_constraintTop_toTopOf="parent"/>

    <Button
            android:text="@string/label_btn_start"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/start_thread"
            android:onClick="Start"
            android:textAppearance="@style/TextAppearance.AppCompat.Button"
            android:textSize="20sp"
            android:fontFamily="sans-serif"
            android:textAllCaps="false"
            android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/show_thread_state"
            app:layout_constraintBottom_toTopOf="@+id/stop_thread"
            app:layout_constraintVertical_bias="1.0"
            app:layout_constraintHorizontal_bias="0.0"/>

    <Button
            android:text="@string/label_btn_stop"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/stop_thread"
            android:onClick="Stop"
            android:textAppearance="@style/TextAppearance.AppCompat.Button"
            android:textSize="20sp"
            android:fontFamily="sans-serif"
            android:textAllCaps="false"
            android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_bias="0.0"/>
</android.support.constraint.ConstraintLayout>